--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -279,142 +279,143 @@ jobs:
           latest: true
           fileName: "*.vsix"
         
-      - run: xcrun altool --notarization-info 40c15859-ea5e-4c83-9010-a8fee2c33b97 --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD
-#      - run: mv *.vsix hardwario-tower.vsix
-#        
-#      - name: Download Visual Studio Code and data folder
-#        run: gdown --folder 1Lb6Ulpk-yXRd-UpaU8DvYJUFpf_XDkg1 
-#                
-#      - name: Unzip all downloaded files
-#        run: | 
-#          mkdir hardwario-code
-#          unzip macOS/hardwario-code-macos.zip
-#          unzip macOS/data.zip -d hardwario-code/
-#          xattr -dr com.apple.quarantine Visual\ Studio\ Code.app
-#          mv Visual\ Studio\ Code.app hardwario-code/Visual\ Studio\ Code.app
-#          chmod -R 777 hardwario-code/
-#          ls hardwario-code
+#      - run: xcrun altool --notarization-info 40c15859-ea5e-4c83-9010-a8fee2c33b97 --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD
+      - run: mv *.vsix hardwario-tower.vsix
+        
+      - name: Download Visual Studio Code and data folder
+        run: gdown --folder 1Lb6Ulpk-yXRd-UpaU8DvYJUFpf_XDkg1 
+                
+      - name: Unzip all downloaded files
+        run: | 
+          mkdir hardwario-code
+          unzip macOS/hardwario-code-macos.zip
+          unzip macOS/data.zip -d hardwario-code/
+          xattr -dr com.apple.quarantine Visual\ Studio\ Code.app
+          mv Visual\ Studio\ Code.app hardwario-code/Visual\ Studio\ Code.app
+          chmod -R 777 hardwario-code/
+          ls hardwario-code
+
+      - name: Install all extensions
+        run: |
+          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension cschlosser.doxdocgen
+          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension marus25.cortex-debug
+          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools
+          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools-themes
+          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension twxs.cmake
+          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension hardwario-tower.vsix
+
+      - name: Prepare macOS Installer
+        run: | 
+          git clone https://github.com/SmejkalJakub/hardwario-macos-installer.git
+          mv hardwario-code/Visual\ Studio\ Code.app hardwario-macos-installer/macOS-x64/application/Visual\ Studio\ Code.app
+          mv hardwario-code/code-portable-data hardwario-macos-installer/macOS-x64/application/code-portable-data
+          ls hardwario-macos-installer/macOS-x64/application/
+
+      - name: Setup env
+        run: echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
+
+      #- name: Install the Apple certificate and provisioning profile
+      #  run: |
+      #    # create variables
+      #    CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+      #    PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+      #    KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 #
-#      - name: Install all extensions
-#        run: |
-#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension cschlosser.doxdocgen
-#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension marus25.cortex-debug
-#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools
-#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools-themes
-#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension twxs.cmake
-#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension hardwario-tower.vsix
+      #    echo "KEYCHAIN_PATH_GLOBAL=$KEYCHAIN_PATH" >> "$GITHUB_ENV"
 #
-#      - name: Prepare macOS Installer
-#        run: | 
-#          git clone https://github.com/SmejkalJakub/hardwario-macos-installer.git
-#          mv hardwario-code/Visual\ Studio\ Code.app hardwario-macos-installer/macOS-x64/application/Visual\ Studio\ Code.app
-#          mv hardwario-code/code-portable-data hardwario-macos-installer/macOS-x64/application/code-portable-data
-#          ls hardwario-macos-installer/macOS-x64/application/
+      #    # import certificate and provisioning profile from secrets
+      #    echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+      #    echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
 #
-#      - name: Setup env
-#        run: echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
+      #    # create temporary keychain
+      #    security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+      #    security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 #
-#      #- name: Install the Apple certificate and provisioning profile
-#      #  run: |
-#      #    # create variables
-#      #    CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-#      #    PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-#      #    KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-##
-#      #    echo "KEYCHAIN_PATH_GLOBAL=$KEYCHAIN_PATH" >> "$GITHUB_ENV"
-##
-#      #    # import certificate and provisioning profile from secrets
-#      #    echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
-#      #    echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
-##
-#      #    # create temporary keychain
-#      #    security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-#      #    security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-##
-#      #    # import certificate to keychain
-#      #    security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -T /usr/bin/codesign -k $KEYCHAIN_PATH
-#      #    security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-#      #    security list-keychain -d user -s $KEYCHAIN_PATH
-##
-#      #    # apply provisioning profile
-#      #    mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-#      #    cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-##
-#      #    security find-identity -v
-#      #    security find-identity -p codesigning
-##
-##
-#      #- run: security find-identity -v
+      #    # import certificate to keychain
+      #    security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -T /usr/bin/codesign -k $KEYCHAIN_PATH
+      #    security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+      #    security list-keychain -d user -s $KEYCHAIN_PATH
 #
-#      - name: Install the Apple certificate and provisioning profile
-#        run: |
-#          # create variables
-#          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-#          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-#          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+      #    # apply provisioning profile
+      #    mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+      #    cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 #
-#          # import certificate and provisioning profile from secrets
-#          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
-#          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+      #    security find-identity -v
+      #    security find-identity -p codesigning
 #
-#          # create temporary keychain
-#          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-#          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-#          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 #
-#          # import certificate to keychain
-#          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-#          security list-keychain -d user -s $KEYCHAIN_PATH
-#
-#          # apply provisioning profile
-#          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-#          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-#
-#      - name: Codesign executable
-#        env: 
-#          MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
-#          MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
-#        run: |
-#          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-#          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-#          echo $APPLICATION_CERTIFICATE_BASE64 | base64 --decode > application.p12
-#          security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
-#          security import application.p12 -k $KEYCHAIN_PATH -P $P12_PASSWORD -T /usr/bin/codesign
-#          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
-#          security find-identity -v
-#          security find-identity -p codesigning
-#
-#      - name: Run macOS Installer
-#        run: | 
-#          echo ${{env.KEYCHAIN_PATH_GLOBAL}}
+      #- run: security find-identity -v
+
+      - name: Install the Apple certificate and provisioning profile
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Codesign executable
+        env: 
+          MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
+          MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
+        run: |
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          echo $APPLICATION_CERTIFICATE_BASE64 | base64 --decode > application.p12
+          security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
+          security import application.p12 -k $KEYCHAIN_PATH -P $P12_PASSWORD -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
+          security find-identity -v
+          security find-identity -p codesigning
+
 #          find . -perm +111 -type f -or -type l -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
 #          find . -name "arm-*" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
 #          find . -name "*.so" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
 #          find . -name "*.dylib" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
 #          find . -name "*.node" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
 #          find . -name "*.o" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
-#
-#
-#          echo "jsem tu"
-#          bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
-#          echo "vyrobeno"
-#          ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
-#          echo "ls"
-#          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
-#          echo "moved"
-#          echo "signed"
-#          echo "notarizing"
-#          xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username "$APP_EMAIL" --password "$APP_SPECIFIC_PASSWORD" --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
-#
-#      - name: Publish the extension
-#        uses: softprops/action-gh-release@v0.1.5
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-#        with:
-#          files: hio-code-${{env.TAG}}-macos.pkg
-#
-#      - name: Upload Artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: hardwario-code-macos
-#          path: hio-code-${{env.TAG}}-macos.pkg
+      - name: Run macOS Installer
+        run: | 
+          echo ${{env.KEYCHAIN_PATH_GLOBAL}}
+          cd ${{ github.workspace }}/hardwario-macos-installer/macOS-x64/application/ ; find . -name "*" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \; ; sudo codesign --force --verify --timestamp --verbose --deep --sign C32QFQ68V9 --options runtime Visual Studio Code.app
+
+          cd ${{ github.workspace }}
+          echo "jsem tu"
+          bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
+          echo "vyrobeno"
+          ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
+          echo "ls"
+          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
+          echo "moved"
+          echo "signed"
+          echo "notarizing"
+          xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username "$APP_EMAIL" --password "$APP_SPECIFIC_PASSWORD" --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
+
+      - name: Publish the extension
+        uses: softprops/action-gh-release@v0.1.5
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          files: hio-code-${{env.TAG}}-macos.pkg
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: hardwario-code-macos
+          path: hio-code-${{env.TAG}}-macos.pkg
