--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,200 +17,200 @@ env:
   APPLICATION_CERTIFICATE_BASE64: ${{ secrets.APPLICATION_CERTIFICATE_BASE64 }}
 
 jobs:
-#  gdrive-upload:
-#    name: Upload all exports to Google Drive
-#    needs: [windows-export, linux-export, macos-export]
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Download all workflow run artifacts
-#        uses: actions/download-artifact@v3
-#
-#      - name: Setup env
-#        run: |
-#          echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
-#          mv hardwario-code-windows/* .
-#          mv hardwario-code-linux/* .
-#          mv hardwario-code-macos/* .
-#
-#      - name: Upload to gdrive Windows
-#        uses: adityak74/google-drive-upload-git-action@main
-#        with:
-#          credentials: ${{ secrets.credentials }}
-#          filename: "hio-code-${{env.TAG}}-windows.msi"
-#          folderId: ${{ secrets.folderId }}
-#     
-#      - name: Upload to gdrive Linux tar
-#        uses: adityak74/google-drive-upload-git-action@main
-#        with:
-#          credentials: ${{ secrets.credentials }}
-#          filename: "hio-code-${{env.TAG}}-linux.tar.gz"
-#          folderId: ${{ secrets.folderId }}
-#
-#      - name: Upload to gdrive macOS
-#        uses: adityak74/google-drive-upload-git-action@main
-#        with:
-#          credentials: ${{ secrets.credentials }}
-#          filename: "hio-code-${{env.TAG}}-macos.pkg"
-#          folderId: ${{ secrets.folderId }}
-         
-#  windows-export:
-#    name: Export HARDWARIO Code Windows
-#    runs-on: windows-latest
-#
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: '3.9'
-#
-#      - uses: caphyon/advinst-github-action@v1.0
-#        with:
-#          advinst-version: '19.7'
-#          advinst-enable-automation: 'true'
-#        
-#      - name: Download and unzip Visual Studio Code
-#        run: |
-#          curl -o Windows/hardwario-code-windows.zip --ssl-no-revoke -LO "https://code.visualstudio.com/sha/download?build=stable&os=win32-x64-archive"
-#          7z x Windows/hardwario-code-windows.zip -ohardwario-code/ -r 
-#      
-#      - name: Create data folder
-#        run: |
-#          export SYSTEM=Windows
-#          ./createDataFolder.sh
-#          mv Windows/data hardwario-code/
-#        shell: bash
-#
-#      - name: Install all extensions
-#        shell: cmd
-#        run: |
-#          call hardwario-code/bin/code.cmd --install-extension cschlosser.doxdocgen
-#          call hardwario-code/bin/code.cmd --install-extension marus25.cortex-debug
-#          call hardwario-code/bin/code.cmd --install-extension ms-vscode.cpptools
-#          call hardwario-code/bin/code.cmd --install-extension ms-vscode.cpptools-themes
-#          call hardwario-code/bin/code.cmd --install-extension twxs.cmake
-#          call hardwario-code/bin/code.cmd --install-extension HARDWARIO.hardwario-tower
-#          del hardwario-code\data\extensions\.init-default-profile-extensions
-#          del hardwario-code\data\extensions\extensions.json
-#
-#      - name: Setup env
-#        shell: bash
-#        run: | 
-#          echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
-#          echo "INSTALLER_TAG=${{env.PLAIN_VERSION}}" >> "$GITHUB_ENV"
-#
-#      - name: Rename executable
-#        shell: bash 
-#        run: mv hardwario-code/*.exe hardwario-code/HARDWARIO\ Code.exe 
-#          
-#      - name: Create installer
-#        shell: PowerShell
-#        run: |
-#          $advinst = New-Object -ComObject AdvancedInstaller
-#          $project = $advinst.CreateProjectS("freeware")
-#          $project.ProductDetails.Name = "HARDWARIO Code"
-#          $project.ProductDetails.Publisher = "HARDWARIO a.s."
-#          $project.ProductDetails.Version = "${{env.INSTALLER_TAG}}"
-#          $project.ProductDetails
-#
-#          $project.FilesComponent.AddFolderContentS("appdir", "${{ github.workspace }}\hardwario-code")
-#          $project.InstallParameters.ApplicationFolder = "[LocalAppDataFolder]\Programs\[ProductName]"
-#          $project.ProductDetails.SetIcon("${{ github.workspace }}\media\hardwario-code-icon.ico")
-#
-#          $project.ShortcutsComponent.CreateFileShortcutS("desktopfolder", "appdir\HARDWARIO Code.exe")
-#          $project.ShortcutsComponent.CreateFileShortcutS($project.PredefinedFolders.ShortcutFolder.FullPath, "appdir\HARDWARIO Code.exe")
-#          $project.ShortcutsComponent.Shortcuts[0].Icon("${{ github.workspace }}\media\hardwario-code-icon.ico")
-#          $project.ShortcutsComponent.Shortcuts[1].Icon("${{ github.workspace }}\media\hardwario-code-icon.ico")
-#          
-#          $outputFolder = "${{ github.workspace }}\setup";
-#          $defaultBuild = $project.BuildComponent.Builds[0];
-#          $defaultBuild.OutputFolder = $outputFolder
-#          
-#          $project.SaveAs("${{ github.workspace }}\hardwario-code.aip")
-#          $project.Build()
-#
-#      - name: Change the msi name
-#        run: mv setup/*.msi hio-code-${{env.TAG}}-windows.msi
-#
-#      - name: Publish the extension;
-#        uses: softprops/action-gh-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-#        with:
-#          files: hio-code-${{env.TAG}}-windows.msi
-#     
-#      - name: Upload Artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: hardwario-code-windows
-#          path: hio-code-${{env.TAG}}-windows.msi
-#          
-#  linux-export:
-#    name: Export HARDWARIO Code Linux
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: '3.9'
-#        
-#      - name: Download and unzip Visual Studio Code
-#        run: |
-#          curl -o Linux/hardwario-code-linux.tar.gz --ssl-no-revoke -LO "https://code.visualstudio.com/sha/download?build=stable&os=linux-x64" 
-#          tar -xvzf Linux/hardwario-code-linux.tar.gz 
-#          mv VSCode-linux-x64 hardwario-code   
-#
-#      - name: Create data folder
-#        run: |
-#          export SYSTEM=Linux
-#          ./createDataFolder.sh
-#          mv Linux/data hardwario-code/
-#                
-#      - name: Set permissions and icon
-#        run: | 
-#          chmod o+rwx hardwario-code
-#          chmod +rwx hardwario-code/code
-#          chmod 777 -R hardwario-code/data
-#
-#          cp media/hardwario-code-icon.png hardwario-code/
-#          cp media/hardwario-code.desktop hardwario-code/
-#
-#          cp media/install.sh hardwario-code/
-#          chmod +x hardwario-code/install.sh
-#
-#      - name: Install all extensions
-#        run: |
-#          ./hardwario-code/bin/code --install-extension cschlosser.doxdocgen
-#          ./hardwario-code/bin/code --install-extension marus25.cortex-debug
-#          ./hardwario-code/bin/code --install-extension ms-vscode.cpptools
-#          ./hardwario-code/bin/code --install-extension ms-vscode.cpptools-themes
-#          ./hardwario-code/bin/code --install-extension twxs.cmake
-#          ./hardwario-code/bin/code --install-extension HARDWARIO.hardwario-tower
-#          rm -rf ./hardwario-code/data/extensions/.init-default-profile-extensions
-#          rm -rf ./hardwario-code/data/extensions/extensions.json
-#
-#      - name: Setup env
-#        run: |
-#          echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
-#          echo "PLAIN_TAG=${{env.PLAIN_VERSION}}" >> "$GITHUB_ENV"
-#
-#      - name: Zip the final product
-#        run: tar -czvf hio-code-${{env.TAG}}-linux.tar.gz hardwario-code/
-#
-#      - name: Publish the extension
-#        uses: softprops/action-gh-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-#        with:
-#          files: |
-#            hio-code-${{env.TAG}}-linux.tar.gz
-#
-#      - name: Upload Artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: hardwario-code-linux
-#          path: hio-code-${{env.TAG}}-linux.tar.gz
+  gdrive-upload:
+    name: Upload all exports to Google Drive
+    needs: [windows-export, linux-export, macos-export]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
+
+      - name: Setup env
+        run: |
+          echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
+          mv hardwario-code-windows/* .
+          mv hardwario-code-linux/* .
+          mv hardwario-code-macos/* .
+
+      - name: Upload to gdrive Windows
+        uses: adityak74/google-drive-upload-git-action@main
+        with:
+          credentials: ${{ secrets.credentials }}
+          filename: "hio-code-${{env.TAG}}-windows.msi"
+          folderId: ${{ secrets.folderId }}
+     
+      - name: Upload to gdrive Linux tar
+        uses: adityak74/google-drive-upload-git-action@main
+        with:
+          credentials: ${{ secrets.credentials }}
+          filename: "hio-code-${{env.TAG}}-linux.tar.gz"
+          folderId: ${{ secrets.folderId }}
+
+      - name: Upload to gdrive macOS
+        uses: adityak74/google-drive-upload-git-action@main
+        with:
+          credentials: ${{ secrets.credentials }}
+          filename: "hio-code-${{env.TAG}}-macos.pkg"
+          folderId: ${{ secrets.folderId }}
+        
+  windows-export:
+    name: Export HARDWARIO Code Windows
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - uses: caphyon/advinst-github-action@v1.0
+        with:
+          advinst-version: '19.7'
+          advinst-enable-automation: 'true'
+        
+      - name: Download and unzip Visual Studio Code
+        run: |
+          curl -o Windows/hardwario-code-windows.zip --ssl-no-revoke -LO "https://code.visualstudio.com/sha/download?build=stable&os=win32-x64-archive"
+          7z x Windows/hardwario-code-windows.zip -ohardwario-code/ -r 
+      
+      - name: Create data folder
+        run: |
+          export SYSTEM=Windows
+          ./createDataFolder.sh
+          mv Windows/data hardwario-code/
+        shell: bash
+
+      - name: Install all extensions
+        shell: cmd
+        run: |
+          call hardwario-code/bin/code.cmd --install-extension cschlosser.doxdocgen
+          call hardwario-code/bin/code.cmd --install-extension marus25.cortex-debug
+          call hardwario-code/bin/code.cmd --install-extension ms-vscode.cpptools
+          call hardwario-code/bin/code.cmd --install-extension ms-vscode.cpptools-themes
+          call hardwario-code/bin/code.cmd --install-extension twxs.cmake
+          call hardwario-code/bin/code.cmd --install-extension HARDWARIO.hardwario-tower
+          del hardwario-code\data\extensions\.init-default-profile-extensions
+          del hardwario-code\data\extensions\extensions.json
+
+      - name: Setup env
+        shell: bash
+        run: | 
+          echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
+          echo "INSTALLER_TAG=${{env.PLAIN_VERSION}}" >> "$GITHUB_ENV"
+
+      - name: Rename executable
+        shell: bash 
+        run: mv hardwario-code/*.exe hardwario-code/HARDWARIO\ Code.exe 
+          
+      - name: Create installer
+        shell: PowerShell
+        run: |
+          $advinst = New-Object -ComObject AdvancedInstaller
+          $project = $advinst.CreateProjectS("freeware")
+          $project.ProductDetails.Name = "HARDWARIO Code"
+          $project.ProductDetails.Publisher = "HARDWARIO a.s."
+          $project.ProductDetails.Version = "${{env.INSTALLER_TAG}}"
+          $project.ProductDetails
+
+          $project.FilesComponent.AddFolderContentS("appdir", "${{ github.workspace }}\hardwario-code")
+          $project.InstallParameters.ApplicationFolder = "[LocalAppDataFolder]\Programs\[ProductName]"
+          $project.ProductDetails.SetIcon("${{ github.workspace }}\media\hardwario-code-icon.ico")
+
+          $project.ShortcutsComponent.CreateFileShortcutS("desktopfolder", "appdir\HARDWARIO Code.exe")
+          $project.ShortcutsComponent.CreateFileShortcutS($project.PredefinedFolders.ShortcutFolder.FullPath, "appdir\HARDWARIO Code.exe")
+          $project.ShortcutsComponent.Shortcuts[0].Icon("${{ github.workspace }}\media\hardwario-code-icon.ico")
+          $project.ShortcutsComponent.Shortcuts[1].Icon("${{ github.workspace }}\media\hardwario-code-icon.ico")
+          
+          $outputFolder = "${{ github.workspace }}\setup";
+          $defaultBuild = $project.BuildComponent.Builds[0];
+          $defaultBuild.OutputFolder = $outputFolder
+          
+          $project.SaveAs("${{ github.workspace }}\hardwario-code.aip")
+          $project.Build()
+
+      - name: Change the msi name
+        run: mv setup/*.msi hio-code-${{env.TAG}}-windows.msi
+
+      - name: Publish the extension;
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          files: hio-code-${{env.TAG}}-windows.msi
+     
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: hardwario-code-windows
+          path: hio-code-${{env.TAG}}-windows.msi
+          
+  linux-export:
+    name: Export HARDWARIO Code Linux
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+        
+      - name: Download and unzip Visual Studio Code
+        run: |
+          curl -o Linux/hardwario-code-linux.tar.gz --ssl-no-revoke -LO "https://code.visualstudio.com/sha/download?build=stable&os=linux-x64" 
+          tar -xvzf Linux/hardwario-code-linux.tar.gz 
+          mv VSCode-linux-x64 hardwario-code   
+
+      - name: Create data folder
+        run: |
+          export SYSTEM=Linux
+          ./createDataFolder.sh
+          mv Linux/data hardwario-code/
+                
+      - name: Set permissions and icon
+        run: | 
+          chmod o+rwx hardwario-code
+          chmod +rwx hardwario-code/code
+          chmod 777 -R hardwario-code/data
+
+          cp media/hardwario-code-icon.png hardwario-code/
+          cp media/hardwario-code.desktop hardwario-code/
+
+          cp media/install.sh hardwario-code/
+          chmod +x hardwario-code/install.sh
+
+      - name: Install all extensions
+        run: |
+          ./hardwario-code/bin/code --install-extension cschlosser.doxdocgen
+          ./hardwario-code/bin/code --install-extension marus25.cortex-debug
+          ./hardwario-code/bin/code --install-extension ms-vscode.cpptools
+          ./hardwario-code/bin/code --install-extension ms-vscode.cpptools-themes
+          ./hardwario-code/bin/code --install-extension twxs.cmake
+          ./hardwario-code/bin/code --install-extension HARDWARIO.hardwario-tower
+          rm -rf ./hardwario-code/data/extensions/.init-default-profile-extensions
+          rm -rf ./hardwario-code/data/extensions/extensions.json
+
+      - name: Setup env
+        run: |
+          echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
+          echo "PLAIN_TAG=${{env.PLAIN_VERSION}}" >> "$GITHUB_ENV"
+
+      - name: Zip the final product
+        run: tar -czvf hio-code-${{env.TAG}}-linux.tar.gz hardwario-code/
+
+      - name: Publish the extension
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          files: |
+            hio-code-${{env.TAG}}-linux.tar.gz
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: hardwario-code-linux
+          path: hio-code-${{env.TAG}}-linux.tar.gz
 
   macos-export:
     name: Export HARDWARIO Code macOS
