--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -311,21 +311,14 @@ jobs:
           security find-identity -v
           security find-identity -p codesigning
 
-#          find . -perm +111 -type f -or -type l -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
-#          find . -name "arm-*" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
-#          find . -name "*.so" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
-#          find . -name "*.dylib" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
-#          find . -name "*.node" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
-#          find . -name "*.o" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
-#          bash sign.sh
+          bash sign.sh
 
       - name: Run macOS Installer
         run: | 
-          bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code v0.0.1
-          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-v0.0.1.pkg "${{ github.workspace }}/hio-code-v0.0.1-macos.pkg"
-          codesign --force --deep --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime "${{ github.workspace }}/hio-code-v0.0.1-macos.pkg"
+          bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
+          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
 
-          xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username "$APP_EMAIL" --password "$APP_SPECIFIC_PASSWORD" --file "${{ github.workspace }}/hio-code-v0.0.1-macos.pkg"
+          xcrun notarytool submit "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg" --apple-id "pavel.hubner@hardwario.com" --password "heog-mmdx-uvqo-kzxl" --team-id "C32QFQ68V9"
       
       - name: Publish the extension
         uses: softprops/action-gh-release@v1
@@ -334,8 +327,8 @@ jobs:
         with:
           files: hardwario-code.zip
 
-#      - name: Upload Artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: hardwario-code-macos
-#          path: hio-code-v0.0.1-macos.pkg
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: hardwario-code-macos
+          path: hio-code-${{env.TAG}}-macos.pkg
